@@ -1,3 +1,8 @@
+Mon May  4 11:58:09 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+    
+    * flaxclient.php: Added database getDocCount() method.
+    * unittests/test_docs.php: Added test for getDocCount().
+
 Mon May  4 11:46:53 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php,
